--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ts:check": "tsc"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.5",
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.10",
@@ -22,6 +23,7 @@
     "expo-asset": "~9.0.2",
     "expo-font": "^11.10.3",
     "expo-status-bar": "~1.11.1",
+    "graphql": "^15.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
